# nfactorial-homeworks

3-forms/: pyproject.toml
3-forms/app/: main.py
3-forms/repository/: car.py
3-forms/templates/: index.html
3-forms/templates/cars/: all_cars.html  new.html  search.html
4-crud-1/: pyproject.toml
4-crud-1/app/: main.py
4-crud-1/repository/: book.py
4-crud-1/templates/books/: detail.html  list.html  new.html
5-crud-2/: pyproject.toml
5-crud-2/app/: main.py
5-crud-2/repository/: book.py
5-crud-2/templates/: index.html
5-crud-2/templates/books/: detail.html  edit.html
6-coockies-auth/app/: main.py
6-coockies-auth/repository/: flower.py
6-coockies-auth/templates/: index.html
6-coockies-auth/templates/cart/: index.html
6-coockies-auth/templates/flower/: list.html
6-coockies-auth/templates/user/: login.html  (+2 more)
7-json/: pyproject.toml
7-json/app/: main.py
7-json/models/: flower.py  purchase.py  user.py
7-json/repository/: flower.py  user.py
8-sqlalchemy/: pyproject.toml  sql_app.db
8-sqlalchemy/alembic/: env.py
8-sqlalchemy/app/: main.py
8-sqlalchemy/repository/: flower.py  purchase.py  user.py
ascii-art-project-1-doctorrin-main/: README.md  main.py
ascii-art-project-1-doctorrin-main/src/: main.py  symbols.py  symbols_list.py  test.py
assignment6/: main.py
fastapi/: pyproject.toml  task_1_2.py  task_3_4_5.py
hw-10-11-doctorrin-master/: hw.py  test_hw.py
hw-12-doctorrin-master/: hw.py  test_hw.py
hw-14/: pyproject.toml
hw-14-poetry/: main.py  pyproject.toml
hw-14-poetry/tests/: test_main.py
hw-15/: hw.py  test_hw.py
hw-16/: hw.py  test_hw.py
hw-7-updated-doctorrin-master/: hw.py  test_hw.py
hw-8-updated-doctorrin-master/: hw.py  hw_bonus.py
hw-9-doctorrin-master/: hw.py  hw_bonus.py
hw-backend-2-master/users/: pyproject.toml
practi/: arr-1.py
voxpop/voxpop/: pyproject.toml
(+7 files in other folders)
