[project]
name = "fastapi_project"
version = "0.1.0"
description = ""
authors = [
    {name = "bakimovameruert",email = "pr2@al-style.kz"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.6,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
