[tool.poetry]
name = "hw-14-poetry"
version = "0.1.0"
description = ""
authors = ["bakimovameruert <pr2@al-style.kz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
